--- a/index.html
+++ b/index.html
@@ -291,12 +291,12 @@
   </div>
   <div class="col-xs-12 col-md-8">
     <ul>
-<li><p>Satellite Data for the Social Sciences: Measuring Rural Electrification with Nighttime Luminosity, with Johannes Urpelainen (Columbia University) and Ryan Kennedy (University of Houston). Submitted.</p></li>
-
 <li><p>A Theoretical Model of Technological Change in Industrial Networks and Implications for a Green Technological Transition, with Marion Dumas (Santa Fe Institute).</p></li>
 
 <li><p>Peer Effects and Technology Diffusion: Experimental Evidence with Solar Lanterns in India, with Yonas Alem (University of Gothenburg).</p></li>
-</ul>
+
+<li><p>Satellite Data for the Social Sciences: Measuring Rural Electrification with Nighttime Luminosity, with Johannes Urpelainen (Columbia University) and Ryan Kennedy (University of Houston). Revise and Resubmit.</p></li>
+    </ul>
 
   </div>
 </div>
