--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I am a Ph.D. candidate in Sustainable Development at the School of International and Public Affairs, at Columbia University. My primary field of research is in Environmental Economics. My interests lie primarily in understanding how institutions and policies can influence science, innovation and technological change in a way that makes the economic machine sustainable for the environment and the human societies that live upon it.</p>
+<p>I am a Ph.D. candidate in Sustainable Development at the School of International and Public Affairs, at Columbia University. My primary field of research is in Environmental Economics. My interests lie primarily in understanding how institutions and policies can influence science, innovation and technological change so that economic development can be sustainable for the environment and societies.</p>
 
 <p>I am on the academic job market and will be available for interviews at the 2018 ASSA Meetings in Philadelphia.</p>
 
