--- a/publication/dugoua.etal2017/index.html
+++ b/publication/dugoua.etal2017/index.html
@@ -152,7 +152,7 @@
     <h1 itemprop="name">Geographic and socio-economic barriers to rural electrification: New evidence from Indian villages.</h1>
     <span class="pub-authors" itemprop="author">
       
-      Eugenie Dugoua, Ruinan Liu, Johannes Urpelainen
+      Eugenie Dugoua, Ruinan Liu, <a href="https://johannesu.com" target="_blank">Johannes Urpelainen</a>
       
     </span>
     <span class="pull-right">
