--- a/publication/dugoua.urpelainen2014/index.html
+++ b/publication/dugoua.urpelainen2014/index.html
@@ -152,7 +152,7 @@
     <h1 itemprop="name">Relative Deprivation and Energy Poverty: When Does Unequal Access to Electricity Cause Dissatisfaction?</h1>
     <span class="pub-authors" itemprop="author">
       
-      Eugenie Dugoua, Johannes Urpelainen
+      Eugenie Dugoua, <a href="https://johannesu.com" target="_blank">Johannes Urpelainen</a>
       
     </span>
     <span class="pull-right">
