--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ I am currently a Ph.D. candidate at the School of International and Public Affai
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p><strong>International Environmental Agreements and Directed Technological Change: Evidence from the Ozone Regime</strong> <a href="papers/JMP_MAIN.pdf" target="_blank">(pdf)</a></p>
+    <p><strong>International Environmental Agreements and Directed Technological Change: Evidence from the Ozone Regime</strong> <a href="papers/JMP_main.pdf" target="_blank">(pdf)</a></p>
 
 <p><details>
 <summary > <em>Click for Abstract</em> </summary>
