--- a/404.html
+++ b/404.html
@@ -155,6 +155,10 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="https://eugeniedugoua.github.io/publication/dugoua.etal2018/">Satellite Data for the Social Sciences: Measuring Rural Electrification with Nighttime Luminosity.</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://eugeniedugoua.github.io/publication/dugoua.etal2017/">Geographic and socio-economic barriers to rural electrification: New evidence from Indian villages.</a></li>
   </ul>
   
