--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ I recently graduated with a Ph.D. from Columbia University and will start in Sep
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p><strong>International Environmental Agreements and Directed Technological Change: Evidence from the Ozone Regime</strong> <a href="papers/Dugoua_Montreal_Innovation.pdf" target="_blank">(pdf)</a> <a href="papers/Dugoua_SOM_Montreal_Innovation.pdf" target="_blank">(SOM)</a></p>
+    <p><strong>International Environmental Agreements and Directed Technological Change: Evidence from the Ozone Regime</strong> <a href="papers/Dugoua_Montreal_Innovation.pdf" target="_blank">(pdf)</a> <a href="papers/Dugoua_SOM_Montreal_Innovation.pdf" target="_blank">(Supporting Online Materials)</a></p>
 
 <p><details>
 <summary > <em>Click for Abstract</em> </summary>
