Update website Jan 2020

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ I recently graduated with a Ph.D. from Columbia University and will start in Sep
 <h1 id="working-papers">Working Papers</h1>
 
 <ul>
-<li><p><strong>International Environmental Agreements and Directed Technological Change: Evidence from the Ozone Regime.</strong><br>
+<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime.</strong><br>
 <a href="papers/Dugoua_Innovation_Montreal.pdf" target="_blank">Pdf here</a> | <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
 <details> <summary > Abstract </summary>
 <div style="text-align: justify">
@@ -324,16 +324,13 @@ Interactions among peers of the same social network play significant roles in fa
 <h1 id="other-publications">Other Publications</h1>
 
 <ul>
-<li><p>Dugoua, Eugenie, Ryan Kennedy, and Johannes Urpelainen. &ldquo;Satellite data for the
-social sciences: measuring rural electrification with night-time lights.&rdquo; International
+<li><p>Dugoua, Eugenie, Ryan Kennedy, and Johannes Urpelainen. &ldquo;Satellite data for the social sciences: measuring rural electrification with night-time lights.&rdquo; International
 journal of remote sensing 39, no. 9 (2018): 2690-2701.</p></li>
 
-<li><p>Dugoua, Eugenie, Ruinan Liu, and Johannes Urpelainen. &ldquo;Geographic and socio-
-economic barriers to rural electrification: New evidence from Indian villages.&rdquo; Energy
+<li><p>Dugoua, Eugenie, Ruinan Liu, and Johannes Urpelainen. &ldquo;Geographic and socio-economic barriers to rural electrification: New evidence from Indian villages.&rdquo; Energy
 Policy 106 (2017): 278-287.</p></li>
 
-<li><p>Dugoua, Eugenie, and Johannes Urpelainen. &ldquo;Relative deprivation and energy poverty:
-when does unequal access to electricity cause dissatisfaction?&rdquo; International Journal of
+<li><p>Dugoua, Eugenie, and Johannes Urpelainen. &ldquo;Relative deprivation and energy poverty: when does unequal access to electricity cause dissatisfaction?&rdquo; International Journal of
 Energy Research 38, no. 13 (2014): 1727-1740.</p></li>
 </ul>
 
