Update website Jan 2020 small changes

--- a/index.html
+++ b/index.html
@@ -190,9 +190,10 @@
     
 
 <p><div style="text-align: justify">
-I am an environmental economist analyzing the issue of technological change. My interests lie primarily in understanding how institutions and policies influence science, innovation, and technological change so that economic development can be sustainable for the environment and societies.
+Hello and Welcome!  <br>
+I am an environmental economist working on topics related to innovation, technological change and energy. In short, my interests lie primarily in understanding how policies, and more broadly speaking, institutions can influence innovation and science. Ultimately, my goals are to better understand how economic development can be sustainable for the environment and societies.
 </div>
-I recently graduated with a Ph.D. from Columbia University and will start in Sept&rsquo;18 as an assistant professor in Environmental Economics at the London School of Economics, in the Department of Geography and Environment.</p>
+I graduated with a Ph.D. in Sustainable Development from Columbia University in 2018. My dissertation focused on the economics of environment and innovation. I have since been appointed Assistant Professor in Environmental Economics at the London School of Economics, in the Department of Geography and Environment. I am also affiliated with the Grantham Research Institute at the London School of Economics.</p>
 
 <h3 id="curriculum-vitae-nbsp-nbsp-span-class-fa-fa-file-pdf-o-errspan-span-cv-eugenie-dugoua-pdf"><strong>Curriculum vitae</strong> &nbsp; &nbsp; <a href="./CV_Eugenie_Dugoua.pdf"> <span class="fa fa-file-pdf-o errspan"></span> </a></h3>
 
