Update website Jan 2020 small changes

--- a/index.html
+++ b/index.html
@@ -274,13 +274,13 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 
 <ul>
 <li><p><strong>Green Innovation in Production Networks: Empirical Evidence from the Auto Industry.</strong><br>
-<em>with <a href="http://tuvalu.santafe.edu/~marion/" target="_blank">Marion Dumas</a> (Grantham Institute)</em>.</p></li>
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (Grantham Institute)</em>.</p></li>
 
 <li><p><strong>Induced Innovation, Inventors, and the Energy Transition.</strong><br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.</p></li>
 
 <li><p><strong>From AI to Green: Can Spillovers Accelerate the Green Transition?</strong><br>
-<em>with <a href="http://tuvalu.santafe.edu/~marion/" target="_blank">Marion Dumas</a> (Grantham Institute) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (Grantham Institute)</em>.
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (Grantham Institute) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (Grantham Institute)</em>.
 <br />
 <br /></p></li>
 </ul>
@@ -298,7 +298,7 @@ Can international environmental agreements induce innovation on green technologi
 <br /></p></li>
 
 <li><p><strong>Green Product Innovation in Industrial Networks: A Theoretical Model.</strong> <br>
-<em>with <a href="http://tuvalu.santafe.edu/~marion/" target="_blank">Marion Dumas</a> (Grantham Institute)</em>.<br>
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (Grantham Institute)</em>.<br>
 <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
 <details>
 <summary> Abstract
