--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@ Can international environmental agreements induce innovation on green technologi
 
 <li><p><strong>Green Product Innovation in Industrial Networks: A Theoretical Model.</strong> <br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (Grantham Institute)</em>.<br>
+<em>Revise&Resubmit at the Journal of Environmental Economics and Management</em><br>
 <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
 <details>
 <summary> Abstract
@@ -311,6 +312,7 @@ Previous studies have typically modeled green technological change as innovation
 
 <li><p><strong>Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India.</strong><br>
 <em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a> (University of Gothenburg)</em>.<br>
+<em>Conditionally Accepted at the Journal of Economic Development and Cultural Change</em><br>
 <a href="papers/Alem.Dugoua_Solar_Lanterns.pdf" target="_blank">Pdf here</a>
 <details>
 <summary> Abstract
