--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ Can international environmental agreements induce innovation on green technologi
 
 <li><p><strong>Green Product Innovation in Industrial Networks: A Theoretical Model.</strong> <br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (Grantham Institute)</em>.<br>
-<em>Revise&Resubmit at the Journal of Environmental Economics and Management</em><br>
+<em>Accepted at the Journal of Environmental Economics and Management</em><br>
 <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
 <details>
 <summary> Abstract
