--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Global environmental problems are some of the most pressing issues that humanity
 <br /></p></li>
   
 <li><p><strong>Assessing Reliability of Electricity Grid Services from Space: The Case of Uttar Pradesh, India.</strong><br>
-<em>with <a href="https://www.uh.edu/class/political-science/faculty-and-staff/professors/kennedy/" target="_blank">Ryan Kennedy</a>, Myriam Shiran and <a href="https://johannesu.com/" target="_blank">Johannes Urpelainen</em>.
+<em>with <a href="https://www.uh.edu/class/political-science/faculty-and-staff/professors/kennedy/" target="_blank">Ryan Kennedy</a>, Myriam Shiran and <a href="https://johannesu.com/" target="_blank">Johannes Urpelainen</a></em>.
 <em>R&R at Energy for Sustainable Development (2021)</em><br>
 <details> <summary > Abstract </summary>
 <div style="text-align: justify">
