--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
 Hello and Welcome!  <br>
 I am an environmental economist working on topics related to innovation, technological change and energy. In short, my interests lie primarily in understanding how policies, and more broadly speaking, institutions can influence innovation and science. Ultimately, my goals are to better understand how economic development can be sustainable for the environment and societies.
 </div>
-I graduated with a Ph.D. in Sustainable Development from Columbia University in 2018. My dissertation focused on the economics of environment and innovation. I have since been appointed Assistant Professor in Environmental Economics at the London School of Economics, in the Department of Geography and Environment. I am also affiliated with the Grantham Research Institute at the London School of Economics.</p>
+I graduated with a Ph.D. in Sustainable Development from Columbia University in 2018. My dissertation focused on the economics of environment and innovation. I have since been appointed Assistant Professor in Environmental Economics at the London School of Economics, in the Department of Geography and Environment. I am also affiliated with the Grantham Research Institute and the Center for Economic Performance at the London School of Economics.</p>
 
-<h3 id="curriculum-vitae-nbsp-nbsp-span-class-fa-fa-file-pdf-o-errspan-span-cv-eugenie-dugoua-pdf"><strong>Curriculum vitae</strong> &nbsp; &nbsp; <a href="./CV_Eugenie_Dugoua.pdf"> <span class="fa fa-file-pdf-o errspan"></span> </a></h3>
+<h3 id="curriculum-vitae-nbsp-nbsp-span-class-fa-fa-file-pdf-o-errspan-span-cv-eugenie-dugoua-pdf"><strong>Click here for CV:</strong> &nbsp; &nbsp; <a href="./CV_Eugenie_Dugoua.pdf"> <span class="fa fa-file-pdf-o errspan"></span> </a></h3>
 
 
     <div class="row">
@@ -291,8 +291,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <h1 id="working-papers">Working Papers</h1>
 
 <ul>
-<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime. Grantham Research Institute on Climate
-Change and the Environment Working Papers (363).</strong><br>
+<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime.</strong><br>
 <a href="papers/working_paper_363_Dugoua.pdf" target="_blank">Pdf here</a> | <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
 <details> <summary > Abstract </summary>
 <div style="text-align: justify">
@@ -319,13 +318,12 @@ While most households around the world have access to electricity, the number of
   
 <ul>
 <li><p><strong>Text as Data in Environmental Economics and Policy.</strong><br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (Grantham Institute)</em><br>
-<em>and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a> (Geneva Graduate Institute)</em>.<br>
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.<br>
 <em>Accepted at the Review of Environmental Economics and Policy (2021)</em><br>
 <br /></p></li>
   
 <li><p><strong>Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India.</strong><br>
-<em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a> (University of Gothenburg)</em>.<br>
+<em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a></em>.<br>
 <em>Accepted at the Journal of Economic Development and Cultural Change (2021)</em><br>
 <a href="papers/alem_dugoua_edcc.pdf" target="_blank">Pdf here</a>
 <details>
@@ -338,7 +336,7 @@ Interactions among peers of the same social network play signiﬁcant roles in f
 <br /></p></li>
   
 <li><p><strong>Green Product Innovation in Industrial Networks: A Theoretical Model.</strong> <br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (Grantham Institute)</em>.<br>
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a></em>.<br>
 <em>Journal of Environmental Economics and Management 107 (2021): 102420.</em><br>
 <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
 <details>
