--- a/index.html
+++ b/index.html
@@ -320,18 +320,18 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 
 <ul>
 <li><p><strong>Green Innovation in Production Networks: Empirical Evidence from the Auto Industry.</strong><br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (Grantham Institute)</em>.</p></li>
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>.</p></li>
 
 <li><p><strong>Induced Innovation, Inventors, and the Energy Transition.</strong><br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.</p></li>
 
 <li><p><strong>From AI to Green: Can Spillovers Accelerate the Green Transition?</strong><br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (Grantham Institute) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (Grantham Institute)</em>.
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.
 <br />
 <br /></p></li>
 
 <li><p><strong>Using Twitter to Measuring Firm-Level Innovation and Other Intangibles.</strong><br>
-<em>with Charlotte cGuillard, <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial)</em> and Jenniffer Solorzano Mosquera.</p></li>
+<em>with Charlotte Guillard (IPO UK), <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial)</em> and Jenniffer Solorzano Mosquera (Imperial).</p></li>
   
 </ul>
 
