--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.</p></li>
 
 <li><p><strong>Using Twitter to Measuring Firm-Level Innovation and Other Intangibles.</strong><br>
-<em>with <a href="https://sites.google.com/site/charlotteguillard" target="_blank">Charlotte Guillard</a> (IPO UK), <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial) and Jenniffer Solorzano Mosquera (Imperial)</em>.</p></li>
+<em>with <a href="https://sites.google.com/site/charlotteguillard" target="_blank">Charlotte Guillard</a> (IPO UK), <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial) and Jenniffer Solorzano Mosquera (Imperial)</em>.<br /></p></li>
   
 </ul>
 
@@ -364,13 +364,12 @@ While most households around the world have access to electricity, the number of
 <h1 id="publications">Publications</h1>
   
 <ul>
-<li><p><strong>Text as Data in Environmental Economics and Policy.</strong><br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.<br>
+<li><p><strong>Text as Data in Environmental Economics and Policy.</strong> <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
 <em>Accepted at the Review of Environmental Economics and Policy (2021)</em><br>
 <br /></p></li>
   
-<li><p><strong>Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India.</strong><br>
-<em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a></em>.<br>
+<li><p><strong>Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India.</strong>
+<em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a></em>.
 <em>Accepted at the Journal of Economic Development and Cultural Change (2021)</em><br>
 <a href="papers/alem_dugoua_edcc.pdf" target="_blank">Pdf here</a>
 <details>
@@ -382,8 +381,8 @@ Interactions among peers of the same social network play signiﬁcant roles in f
 </details>
 <br /></p></li>
   
-<li><p><strong>Green Product Innovation in Industrial Networks: A Theoretical Model.</strong> <br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a></em>.<br>
+<li><p><strong>Green Product Innovation in Industrial Networks: A Theoretical Model.</strong>
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a></em>.
 <em>Journal of Environmental Economics and Management 107 (2021): 102420.</em><br>
 <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
 <details>
