--- a/index.html
+++ b/index.html
@@ -319,20 +319,25 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <h1 id="work-in-progress">Work in Progress</h1>
 
 <ul>
-<li><p><strong>Green Innovation in Production Networks: Empirical Evidence from the Auto Industry.</strong><br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>.</p></li>
 
 <li><p><strong>Induced Innovation, Inventors, and the Energy Transition.</strong><br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.</p></li>
 
-<li><p><strong>From AI to Green: Can Spillovers Accelerate the Green Transition?</strong><br>
+<li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Energy Transition?</strong><br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.</p></li>
+
+<li><p><strong>Producing & Steering Researchers: Evidence from the Energy Innovations</strong><br>
+<em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>, 
+ <a href="https://www.kylemyers.org/" target="_blank">Kyle Myers</a> (Harvard Business School)</em>,
+ and <a href="https://jacquelynpless.com/" target="_blank">Jacquelyn Pless</a> (MIT Sloan)</em>.</p></li>
+  
+<li><p><strong>Green Innovation in the Car Industry: Spillovers, Policy and Coordination.</strong><br>
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>.</p></li>
 
 <li><p><strong>Using Twitter to Measuring Firm-Level Innovation and Other Intangibles.</strong><br>
 <em>with <a href="https://sites.google.com/site/charlotteguillard" target="_blank">Charlotte Guillard</a> (IPO UK), <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial) and Jenniffer Solorzano Mosquera (Imperial)</em>.<br /></p></li>
-  
-</ul>
 
+</ul>
     
     
 <h1 id="working-papers">Working Papers</h1>
