--- a/index.html
+++ b/index.html
@@ -405,10 +405,7 @@ Previous studies have typically modeled green technological change as innovation
 <li><p><strong>Assessing Reliability of Electricity Grid Services from Space: The Case of Uttar Pradesh, India. </strong>
 <em>with <a href="https://www.uh.edu/class/political-science/faculty-and-staff/professors/kennedy/" target="_blank">Ryan Kennedy</a> </em>, Myriam Shiran and <a href="https://johannesu.com/" target="_blank">Johannes Urpelainen</a></em>.
 <em>Accepted at Energy for Sustainable Development (2022).</em><br>
-<a href="papers/prayas_ESD.pdf" target="_blank">Pdf here</a>
-<details>
-<summary> Abstract
-</summary>
+<a href="papers/prayas_ESD.pdf" target="_blank">Pdf here</a> <details> <summary> Abstract </summary>
 <div style="text-align: justify">
 While most households around the world have access to electricity, the number of hours per day when the grid supplies them with adequate voltage can be low. Improving the reliability of electricity is crucial to make progress on energy poverty but measuring and monitoring it is difficult, especially in lower-income countries where official data is sparse. We develop a transparent method using only easily accessible data to track the reliability of electricity. We train a decision tree model to predict the number of hours with normal electricity in Uttar Pradesh, India, using monthly nighttime luminosity, village characteristics, and voltage data from monitors installed in households. The approach successfully predicts reliability across time and space, and we document that, in Uttar Pradesh, the average number of hours per day with normal electricity has increased by 0.9 hours between 2014 and 2019. The predicted number of hours per day for 2019 remains as low as 8.3 hours.
 </div>
