--- a/index.html
+++ b/index.html
@@ -383,13 +383,6 @@ Interactions among peers of the same social network play signiﬁcant roles in f
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a></em>.
 <em>Journal of Environmental Economics and Management 107 (2021): 102420.</em><br>
 <a href="papers/Dugoua.Dumas_Green_Innovation_Production_Network.pdf" target="_blank">Pdf here</a>
-<details>
-<summary> Abstract
-</summary>
-<div style="text-align: justify">
-Previous studies have typically modeled green technological change as innovations in the process through which goods are produced (e.g., abatement technologies or energy sources). But greening the economy also requires changing the products that we use. The automotive industry, for example, needs to deploy large fleets of electric or hydrogen-based vehicles. Product manufacturing nowadays occurs within supply-chain networks, and developing new products typically requires complementary investments by suppliers. In this paper, we study the incentives for green product innovation in industrial networks and how policies can affect them. We follow the industrial organization theory of product differentiation, and model green product innovations as upgrades in product quality where inputs from suppliers are essential for upgrading quality. We show that suppliers can be innovation bottlenecks and render policy instruments less effective. An extension of the model introduces uncertainty in the direction of technological change. Here, we provide an explicit mechanism for the role of institutions that can help actors coordinate on a long-term direction of innovation. Finally, we discuss how our results help organize several findings from case studies in the automotive industry.
-</div>
-</details>
 <br /></p></li>
   
 </ul>
@@ -405,11 +398,7 @@ Previous studies have typically modeled green technological change as innovation
 <li><p><strong>Assessing Reliability of Electricity Grid Services from Space: The Case of Uttar Pradesh, India. </strong>
 <em>with <a href="https://www.uh.edu/class/political-science/faculty-and-staff/professors/kennedy/" target="_blank">Ryan Kennedy</a> </em>, Myriam Shiran and <a href="https://johannesu.com/" target="_blank">Johannes Urpelainen</a></em>.
 <em>Accepted at Energy for Sustainable Development (2022).</em><br>
-<a href="papers/prayas_ESD.pdf" target="_blank">Pdf here</a> <details> <summary> Abstract </summary>
-<div style="text-align: justify">
-While most households around the world have access to electricity, the number of hours per day when the grid supplies them with adequate voltage can be low. Improving the reliability of electricity is crucial to make progress on energy poverty but measuring and monitoring it is difficult, especially in lower-income countries where official data is sparse. We develop a transparent method using only easily accessible data to track the reliability of electricity. We train a decision tree model to predict the number of hours with normal electricity in Uttar Pradesh, India, using monthly nighttime luminosity, village characteristics, and voltage data from monitors installed in households. The approach successfully predicts reliability across time and space, and we document that, in Uttar Pradesh, the average number of hours per day with normal electricity has increased by 0.9 hours between 2014 and 2019. The predicted number of hours per day for 2019 remains as low as 8.3 hours.
-</div>
-</details>
+<a href="papers/prayas_ESD.pdf" target="_blank">Pdf here</a> 
 <br /></p></li>  
 
 <li><p><strong>Satellite data for the social sciences: measuring rural electrification with night-time lights. </strong>
