--- a/index.html
+++ b/index.html
@@ -373,10 +373,7 @@ Global environmental problems are some of the most pressing issues that humanity
 <li><p><strong>Learning from Unincentivized and Incentivized Communication: A Randomized Controlled Trial in India.</strong>
 <em>with <a href="http://www.yonasalem.net/" target="_blank">Yonas Alem</a></em>.
 <em>Accepted at the Journal of Economic Development and Cultural Change (2021)</em><br>
-<a href="papers/alem_dugoua_edcc.pdf" target="_blank">Pdf here</a> <details>
-<summary> Abstract </summary> <div style="text-align: justify">
-Interactions among peers of the same social network play signiﬁcant roles in facilitating the adoption and diﬀusion of modern technologies in poor communities. We conduct a large-scale randomized controlled trial in rural India to identify the impact of information from friends on willingness to pay (WTP) for high-quality and multi-purpose solar lanterns. We oﬀered solar lanterns to seed households from 200 non-electriﬁed villages and randomly assigned three of their friends to two communication treatments (unincentivized and incentivized) that led to diﬀerent exposure to their seed friend. We also introduce a second treatment to investigate whether the seed’s gender impacts the magnitude of peer eﬀects. We show that unincentivized communication increases WTP for solar lanterns by 90% and incentivized communication by 145%, but gender doesn’t seem to matter. We also show that learning from others is the mechanism that drives the increase in WTP. Our ﬁndings have signiﬁcant implications for policies that aim at promoting the diﬀusion of new technologies in developing countries.
-</div> </details>
+<a href="papers/alem_dugoua_edcc.pdf" target="_blank">Pdf here</a>  
 <br /></p></li>
   
 <li><p><strong>Green Product Innovation in Industrial Networks: A Theoretical Model.</strong>
