--- a/index.html
+++ b/index.html
@@ -335,7 +335,8 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>.</p></li>
 
 <li><p><strong>Using Twitter to Measuring Firm-Level Innovation and Other Intangibles.</strong><br>
-<em>with <a href="https://sites.google.com/site/charlotteguillard" target="_blank">Charlotte Guillard</a> (IPO UK), <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial) and Jenniffer Solorzano Mosquera (Imperial)</em>.<br /></p></li>
+<em>with <a href="https://sites.google.com/site/charlotteguillard" target="_blank">Charlotte Guillard</a> (IPO UK), <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial) and Jenniffer Solorzano Mosquera (Imperial)</em>.
+  <br /> </p></li>
 
 </ul>
     
@@ -347,6 +348,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <h1 id="working-papers">Working Papers</h1>
 
 <ul>
+  
 <li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime.</strong><br>
 <a href="papers/working_paper_363_Dugoua.pdf" target="_blank">Pdf here</a> | <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
 <details> <summary > Abstract </summary>
