--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 
 <ul>
   
-<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime.</strong><br>
+<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime. (R&R at The Review of Economics and Statistics)</strong><br>
 <a href="papers/working_paper_363_Dugoua.pdf" target="_blank">Pdf here</a> | <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
 <details> <summary > Abstract </summary>
 <div style="text-align: justify">
