--- a/index.html
+++ b/index.html
@@ -323,9 +323,6 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <li><p><strong>Induced Innovation, Inventors, and the Energy Transition.</strong><br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.</p></li>
 
-<li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Energy Transition?</strong><br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.</p></li>
-
 <li><p><strong>Producing & Steering Researchers: Evidence from the Energy Innovations</strong><br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>, 
  <a href="https://www.kylemyers.org/" target="_blank">Kyle Myers</a> (Harvard Business School)</em>,
@@ -356,7 +353,22 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 Global environmental problems are some of the most pressing issues that humanity is facing. There are few examples of success at resolving them; the fight to protect the ozone layer is one of them. This paper provides evidence that the Montreal Protocol’s restrictions on chlorofluorocarbons ( CFCs) t riggered a s ubstantial i ncrease i n r esearch a nd innovation on alternatives to ozone-depleting molecules. I compare CFC substitute molecules to molecules that have similar uses but are unrelated to ozone depletion. After the signing of the agreement, patents on CFC substitutes increased by 400% and scientific articles by 500% compared to the control group. These findings suggest that agreements can indeed trigger the development of technological solutions, thereby improving the benefit-cost equation of environmental protection.
 </div>
 </details>
-<br /></p></li>
+<br/></p></li>
+
+
+<li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Clean Energy Innovation?</strong><br>
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.
+<a href="papers/GreenAI_manuscript.pdf" target="_blank">Pdf here</a> | <a href="papers/GreenAI_som.pdf" target="_blank">Supporting Online Materials here</a>
+<details> <summary > Abstract </summary>
+<div style="text-align: justify">
+Transitioning away from dirty and towards clean technologies is critical to reduce carbon emissions, but the race between clean and dirty technologies is taking place against the backdrop of improvements in general-purpose technologies (GPT) such as information and communication technologies (ICT) and artificial intelligence (AI). 
+We show how, in theory, a GPT can affect the direction of technological change and, in particular, the competition between clean and dirty technologies. 
+Second, we use patent data to show that clean technologies absorb more spillovers from AI and ICT than dirty technologies and that energy patenting firms with higher AI knowledge stocks are more likely to absorb AI spillovers for their energy inventions.
+We conclude that ICT and AI have the potential to accelerate clean energy innovation.  
+</div>
+</details>
+</p></li>
+
   
 </ul>
 
