--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ Global environmental problems are some of the most pressing issues that humanity
 
 
 <li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Clean Energy Innovation?</strong><br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.<br>
 <a href="papers/GreenAI_manuscript.pdf" target="_blank">Pdf here</a> | <a href="papers/GreenAI_som.pdf" target="_blank">Supporting Online Materials here</a>
 <details> <summary > Abstract </summary>
 <div style="text-align: justify">
