--- a/index.html
+++ b/index.html
@@ -332,9 +332,12 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>.</p></li>
 
 <li><p><strong>Using Twitter to Measuring Firm-Level Innovation and Other Intangibles.</strong><br>
-<em>with <a href="https://sites.google.com/site/charlotteguillard" target="_blank">Charlotte Guillard</a> (IPO UK), <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial) and Jenniffer Solorzano Mosquera (Imperial)</em>.
+<em>with 
+  <a href="https://sites.google.com/site/charlotteguillard" target="_blank">Charlotte Guillard</a> (IPO UK), 
+  <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial) and
+  <a href="https://www.jenniffersolorzanomosquera.com/" target="_blank">Jenniffer Solorzano Mosquera </a> (Imperial)</em>.
   <br /> </p></li>
-
+<br>
 </ul>
     
     
