--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('https://eugeniedugoua.github.io/img/headshot_photo2.jpg');">
+      <div class="portrait" style="background-image: url('https://eugeniedugoua.github.io/img/LSE_Headshot.jpg');">
       </div>
-      <meta itemprop="image" content="https://eugeniedugoua.github.io/img/headshot_photo2.jpg">
+      <meta itemprop="image" content="https://eugeniedugoua.github.io/img/LSE_Headshot.jpg">
       
 
       <div class="portrait-title">
