--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
   
 
 <li><p><strong>Support for climate policy researchers.</strong> 
-<em>Science. (2022). Link <a href="https://www.science.org/doi/10.1126/science.adf8956" target="_blank">here</a>. with Hanna R, Dugoua E, Nuñez-Jimenez A, Nock D, Arcusa S, Castellanos S, Davidson
+<em>Science. (2022). Link <a href="https://www.science.org/doi/10.1126/science.adf8956" target="_blank">here</a>. with Hanna R, Nuñez-Jimenez A, Nock D, Arcusa S, Castellanos S, Davidson
 MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Musa M, O'Rear E, Sivaranjani S, Zhang J, Zhu Q. </em>
 <br /></p></li>
   
