--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 
 <ul>
 
-<li><p><strong>Induced Innovation, Inventors, and the Energy Transition.</strong><br>
+<li><p><strong>Induced Innovation, Inventors, and the Energy Transition</strong><br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.</p></li>
 
 <li><p><strong>Producing & Steering Researchers: Evidence from the Energy Innovations</strong><br>
@@ -329,17 +329,17 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
  <a href="https://www.kylemyers.org/" target="_blank">Kyle Myers</a> (Harvard Business School)</em>,
  and <a href="https://jacquelynpless.com/" target="_blank">Jacquelyn Pless</a> (MIT Sloan)</em>.</p></li>
   
-<li><p><strong>Green Innovation in the Car Industry: Spillovers, Policy and Coordination.</strong><br>
+<li><p><strong>Green Innovation in the Car Industry: Spillovers, Policy and Coordination</strong><br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>.</p></li>
 
-<li><p><strong>Using Twitter to Measuring Firm-Level Innovation and Other Intangibles.</strong><br>
+<li><p><strong>Using Twitter to Measuring Firm-Level Innovation and Other Intangibles</strong><br>
 <em>with 
   <a href="https://sites.google.com/site/charlotteguillard" target="_blank">Charlotte Guillard</a> (IPO UK), 
   <a href="https://mondpanther.github.io/wwwmondpanther/" target="_blank">Ralf Martin</a> (Imperial) and
   <a href="https://www.jenniffersolorzanomosquera.com/" target="_blank">Jenniffer Solorzano Mosquera </a> (Imperial)</em>.
   <br /> </p></li>
 
-<li><p><strong>The Effects of Air Pollution on Inventor Productivity.</strong><br>
+<li><p><strong>The Effects of Air Pollution on Inventor Productivity</strong><br>
 <em>with <a href="https://www.lse.ac.uk/geography-and-environment/people/phd-students/ina-drouven" target="_blank">Ina Drouven</a> (LSE)</em> 
   and <a href="https://sites.google.com/site/sefijroth/home" target="_blank">Sefi Roth</a> (LSE)</em>.</p></li>
 
@@ -400,7 +400,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
     
 
  
-<h1 id="reports">Non-refereed publications</h1>
+<h1 id="reports">Non-Refereed Publications</h1>
 <br>
 
 <ul>
