--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
     <ul class="fa-ul" itemscope>
 
       
-<h3 id="curriculum-vitae-nbsp-nbsp-span-class-fa-fa-file-pdf-o-errspan-span-cv-eugenie-dugoua-pdf"><strong>Click here for CV:</strong> &nbsp; &nbsp; <a href="./CV_Eugenie_Dugoua.pdf"> <span class="fa fa-file-pdf-o errspan"></span> </a></h3>
+<h3 id="curriculum-vitae-nbsp-nbsp-span-class-fa-fa-file-pdf-o-errspan-span-cv-eugenie-dugoua-pdf"><strong>Click here for CV:</strong> &nbsp; &nbsp; <a href="./CV_Eugenie_Dugoua_long.pdf"> <span class="fa fa-file-pdf-o errspan"></span> </a></h3>
      
 
     </ul>
