--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 
 <li><p><strong>The Effects of Air Pollution on Inventor Productivity</strong><br>
 <em>with <a href="https://www.lse.ac.uk/geography-and-environment/people/phd-students/ina-drouven" target="_blank">Ina Drouven</a> (LSE)</em> 
-  and <a href="https://sites.google.com/site/sefijroth/home" target="_blank">Sefi Roth</a> (LSE)</em>.</p></li>
+  and <em> <a href="https://sites.google.com/site/sefijroth/home" target="_blank">Sefi Roth</a> (LSE)</em>.</p></li>
 
 <br>
 </ul>
