--- a/index.html
+++ b/index.html
@@ -407,13 +407,14 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
   
 
 <li><p><strong>Support for climate policy researchers.</strong> 
-<em>Science. (2022). Link <a href="https://www.science.org/doi/10.1126/science.adf8956" target="_blank">here</a>. with Hanna R, Nuñez-Jimenez A, Nock D, Arcusa S, Castellanos S, Davidson
+<em>Science (2022). Link <a href="https://www.science.org/doi/10.1126/science.adf8956" target="_blank">here</a>. with Hanna R, Nuñez-Jimenez A, Nock D, Arcusa S, Castellanos S, Davidson
 MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Musa M, O'Rear E, Sivaranjani S, Zhang J, Zhu Q. </em>
 <br /></p></li>
   
   
 <li><p><strong>Research and Innovation Policies for the Green Transition.</strong> 
-<em>Chapter in the <a href="https://research-and-innovation.ec.europa.eu/knowledge-publications-tools-and-data/publications/all-publications/science-research-and-innovation-performance-eu-2022-report_en" target="_blank">2022 SRIP Report</a>: Science, Research and Innovation Performance of the EU.</em>
+<em>Chapter in the 2022 SRIP Report: Science, Research and Innovation Performance of the EU.</em> 
+  Link <a href="https://research-and-innovation.ec.europa.eu/knowledge-publications-tools-and-data/publications/all-publications/science-research-and-innovation-performance-eu-2022-report_en" target="_blank">here</a>.
 <br /></p></li>
 
   
