--- a/index.html
+++ b/index.html
@@ -355,7 +355,8 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <br>
 <ul>
   
-<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime. (R&R at The Review of Economics and Statistics)</strong><br>
+<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime. </strong> <br>
+ R&R at The Review of Economics and Statistics <br>
 <a href="papers/working_paper_363_Dugoua.pdf" target="_blank">Pdf here</a> | 
   <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
 <br/></p></li>
