--- a/index.html
+++ b/index.html
@@ -415,7 +415,8 @@ MR, Edwards MR, Galeazzi C, Gao X, Graff M, Kennedy KM, Kontou E, Lathwal P, Mus
   
 <li><p><strong>Research and Innovation Policies for the Green Transition.</strong> 
 <em>Chapter in the 2022 SRIP Report: Science, Research and Innovation Performance of the EU.</em> 
-  Link <a href="https://research-and-innovation.ec.europa.eu/knowledge-publications-tools-and-data/publications/all-publications/science-research-and-innovation-performance-eu-2022-report_en" target="_blank">here</a>.
+  Link to chapter <a href="papers/SRIP_chap10_eugeniedugoua.pdf" target="_blank">here</a>. 
+  Link to full report <a href="https://research-and-innovation.ec.europa.eu/knowledge-publications-tools-and-data/publications/all-publications/science-research-and-innovation-performance-eu-2022-report_en" target="_blank">here</a>.
 <br /></p></li>
 
   
