--- a/index.html
+++ b/index.html
@@ -354,13 +354,6 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <h1 id="working-papers">Working Papers</h1>
 <br>
 <ul>
-  
-<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime. </strong> <br>
- R&R at The Review of Economics and Statistics <br>
-<a href="papers/working_paper_363_Dugoua.pdf" target="_blank">Pdf here</a> | 
-  <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
-<br/></p></li>
-
 
 <li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Clean Energy Innovation?</strong><br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.<br>
@@ -377,6 +370,12 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
     
 <h1 id="publications">Publications</h1>
 <br>
+
+<li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime. </strong> <br>
+ Accepted at The Review of Economics and Statistics <br>
+<a href="papers/working_paper_363_Dugoua.pdf" target="_blank">Pdf here</a> | 
+  <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
+<br/></p></li>
 
 <ul>
 <li><p><strong>Text as Data in Environmental Economics and Policy.</strong> <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> and <a href="https://www.graduateinstitute.ch/academic-departments/faculty/joelle-noailly" target="_blank">Joelle Noailly</a></em>.
