--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <ul>
 
 <li><p><strong>Induced Innovation and International Environmental Agreements: Evidence from the Ozone Regime. </strong> <br>
- Accepted at The Review of Economics and Statistics <br>
+ Accepted at The Review of Economics and Statistics (2023) <br>
 <a href="papers/working_paper_363_Dugoua.pdf" target="_blank">Pdf here</a> | 
   <a href="papers/Dugoua_Innovation_Montreal_SOM.pdf" target="_blank">Supporting Online Materials here</a>
 <br/></p></li>
