--- a/index.html
+++ b/index.html
@@ -337,15 +337,14 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <ul>
   
 <li><p><strong>Induced Innovation, Inventors, and the Energy Transition</strong><br>
-<em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.</p>
+<em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.<br>
 <em>Working papers: </em>  
 <a href="www.nber.org/papers/w31714" target="_blank">NBER</a> 
   | <a href="www.cesifo.org/en/publications/2023/working-paper/induced-innovation-inventors-and-energy-transition" target="_blank">CESifo</a> 
-  | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10471" target="_blank">CEP</a></li>
- 
-  
+  | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10471" target="_blank">CEP</a></p></li>
+
 <li><p><strong> Global Coordination Challenges in the Transition to Clean Technology: Lessons from Automotive Innovation </strong><br>
-<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>.<br>
+<em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE)</em>. 
 <em>Draft available upon request</em>.</p></li>
 
 <li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Clean Energy Innovation?</strong><br>
