--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <li><p><strong>Induced Innovation, Inventors, and the Energy Transition</strong><br>
 <em>with <a href="https://toddgerarden.com/" target="_blank">Todd Gerarden</a> (Cornell University)</em>.<br>
 <em>Working papers: </em>  
-<a href="www.nber.org/papers/w31714" target="_blank">NBER</a> 
-  | <a href="www.cesifo.org/en/publications/2023/working-paper/induced-innovation-inventors-and-energy-transition" target="_blank">CESifo</a> 
+<a href="https://www.nber.org/papers/w31714" target="_blank">NBER</a> 
+  | <a href="https://www.cesifo.org/en/publications/2023/working-paper/induced-innovation-inventors-and-energy-transition" target="_blank">CESifo</a> 
   | <a href="https://cep.lse.ac.uk/_NEW/publications/abstract.asp?index=10471" target="_blank">LSE CEP</a></p></li>
 
 <li><p><strong> Global Coordination Challenges in the Transition to Clean Technology: Lessons from Automotive Innovation </strong><br>
@@ -350,7 +350,7 @@ I graduated with a Ph.D. in Sustainable Development from Columbia University in 
 <li><p><strong>Directed Technological Change and General Purpose Technologies: Can AI Accelerate the Clean Energy Innovation?</strong><br>
 <em>with <a href="https://mariondumas.github.io/" target="_blank">Marion Dumas</a> (LSE) and <a href="http://www.lse.ac.uk/GranthamInstitute/profile/pia-andres/" target="_blank">Pia Andres</a> (LSE)</em>.<br>
 <em>Working papers: </em> 
-<a href="www.lse.ac.uk/granthaminstitute/publication/directed-technological-change-and-general-purpose-technologies-can-ai-accelerate-clean-energy-innovation/" target="_blank">LSE GRI </a><br>
+<a href="https://www.lse.ac.uk/granthaminstitute/publication/directed-technological-change-and-general-purpose-technologies-can-ai-accelerate-clean-energy-innovation/" target="_blank">LSE GRI </a><br>
 </p></li>
 
   
